<resources>
    <string name="app_name">SCMusic</string>
    <string name="alternative_rock">AlternativeRock</string>
    <string name="ambient">Ambient</string>
    <string name="classical">Classical</string>
    <string name="country">Country</string>
    <string name="action_see_all">See All</string>
    <string name="Please_press_Back_again_to_exit">Please press Back again to exit</string>
    <string name="search">Search Tracks</string>
</resources>
