<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.along.scmusic.screen.home.HomeViewModel"
            />
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerSlider"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_160"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:viewPagerAdapter="@{viewModel.sliderAdapter}"
                />
            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                app:adapterChanged="@{viewModel.mIsAdapterChanged}"
                app:layout_constraintBottom_toBottomOf="@id/viewPagerSlider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:viewPager="@{viewPagerSlider}"
                />
            <View
                android:id="@+id/viewRock"
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/titleRock"
                app:layout_constraintTop_toBottomOf="@id/viewPagerSlider"
                />
            <TextView
                android:id="@+id/titleRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/alternative_rock"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/viewRock"
                app:layout_constraintTop_toBottomOf="@id/viewPagerSlider"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="@{(v) -> viewModel.goToSeeMoreMusicActivity(v, viewModel.mRock)}"
                android:text="@string/action_see_all"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPagerSlider"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerRock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/oneLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewRock"
                app:recyclerAdapter="@{viewModel.rockAdapter}"
                />
            <View
                android:id="@+id/oneLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerRock"
                />
            <View
                android:id="@+id/viewAmbient"
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/titleAmbient"
                app:layout_constraintTop_toBottomOf="@id/oneLine"
                />
            <TextView
                android:id="@+id/titleAmbient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/ambient"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/viewAmbient"
                app:layout_constraintTop_toBottomOf="@id/oneLine"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="@{(v) -> viewModel.goToSeeMoreMusicActivity(v, viewModel.mAmbient)}"
                android:text="@string/action_see_all"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oneLine"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerAmbient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/secondLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewAmbient"
                app:recyclerAdapter="@{viewModel.ambientAdapter}"
                />

            <View
                android:id="@+id/secondLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerAmbient"
                />
            <View
                android:id="@+id/viewClassical"
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/titleClassical"
                app:layout_constraintTop_toBottomOf="@id/secondLine"
                />
            <TextView
                android:id="@+id/titleClassical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/classical"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/viewClassical"
                app:layout_constraintTop_toBottomOf="@id/secondLine"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="@{(v) -> viewModel.goToSeeMoreMusicActivity(v, viewModel.mClassical)}"
                android:text="@string/action_see_all"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondLine"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerClassical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/thirdLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewClassical"
                app:recyclerAdapter="@{viewModel.classicalAdapter}"
                />
            <View
                android:id="@+id/thirdLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerClassical"
                />
            <View
                android:id="@+id/viewCountry"
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/titleCountry"
                app:layout_constraintTop_toBottomOf="@id/thirdLine"
                />
            <TextView
                android:id="@+id/titleCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/country"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/viewCountry"
                app:layout_constraintTop_toBottomOf="@id/thirdLine"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="@{(v) -> viewModel.goToSeeMoreMusicActivity(v, viewModel.mCountry)}"
                android:text="@string/action_see_all"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thirdLine"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewCountry"
                app:recyclerAdapter="@{viewModel.countryAdapter}"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
